Add user, email and password validation.

--- a/src/Components/RegisterForm/RegisterForm.css
+++ b/src/Components/RegisterForm/RegisterForm.css
@@ -19,6 +19,13 @@
     text-decoration: underline;
 }
 
-.red-box {
+.input-box .red-box {
     border: 2px solid rgba(255, 0, 0, 0.2);
+}
+
+.error-message {
+    color: rgba(200, 0, 0, 0.6);
+    font-size: 14px;
+    padding-top: 12px;
+    font-weight: 600;
 }
