--- a/src/Components/Notes/Notes.css
+++ b/src/Components/Notes/Notes.css
@@ -1,19 +1,19 @@
 .notes-container {
     position: relative;
-    margin: 30px 0;
+    margin: 30px auto;
     background-color: rgba(0, 0, 0, 0.2);
     display: inline-block;
 }
 
 .note-input {
     background-color: rgba(0, 0, 0, 0.2);
-    border: 2px solid rgba(255, 255, 255, 0.2);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border: 0 solid rgba(255, 255, 255, 0);
     color: #fff;
     margin: 10px 0;
     padding: 5px 0;
-    width: 200px;
-    height: auto;
+    width: 300px;
+    height: 40px;
     word-wrap: break-word;
     border-radius: 10px;
     outline: none;
@@ -22,6 +22,13 @@
     resize: none;
     font-family: inherit;
     field-sizing: content;
+    transition: height 0.5s ease, border 0.5s ease;
+}
+
+.note-input:focus {
+    border: 2px solid rgba(255, 255, 255, 0.2);
+    height: 200px;
+
 }
 
 button {
